--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -90,7 +90,7 @@
 </div>
 
 <a id="skills" class="anchor"></a>
-<div class="container">
+<div class="container section">
     <h3 class="title">Skills</h3>
 
     {% for category in skill_categories %}
@@ -116,7 +116,7 @@
 </div>
 
 <a id="projects" class="anchor"></a>
-<div class="container">
+<div class="container section">
     <h3 class="title">
         Projects
     </h3>  
@@ -160,7 +160,7 @@
 <!-- End of Projects Div-->
 
 <a id="contact" class="anchor"></a>
-<div class="container">
+<div class="container section">
     <h3 class="title">
         Contact
     </h3>
