--- a/src/Portfolio.Web/src/templates/layout.njk
+++ b/src/Portfolio.Web/src/templates/layout.njk
@@ -31,18 +31,14 @@
     {% block content %}
     {% endblock %}
 
-    <footer class="footer">
-        <span>&copy; Mitchell Caisse</span>
+    <footer class="footer is-vcentered">
+        <span>&copy; 2019 Mitchell Caisse</span>
 
-        <div id="footer-right" class="pull-right">
-            <ul>
-                <li>
-                    <a href="https://github.com/mwcaisse" target="_blank">
-                        <i class="fab fa-github fa-2x action-icon"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
+        <span class="is-pulled-right">            
+            <a href="https://github.com/mwcaisse" target="_blank">
+                <i class="fab fa-github fa-2x action-icon"></i>
+            </a>          
+        </span>
     </footer>
 
     {% block scripts %}
