--- a/Portfolio/Portfolio.Web/src/templates/layout.njk
+++ b/Portfolio/Portfolio.Web/src/templates/layout.njk
@@ -26,7 +26,7 @@
 </head>
 
 <body>    
-    <input id="apiRoot" type="hidden"value="{{ apiRoot }}" />
+    <input id="apiRoot" type="hidden"value="[[api_root]]" />
 
     {% block content %}
     {% endblock %}
