--- a/Portfolio/Portfolio.Web/src/templates/layout.njk
+++ b/Portfolio/Portfolio.Web/src/templates/layout.njk
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" context="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link rel="stylesheet" href="{{ contextRoot }}lib/bulma/css/bulma.min.css" />
-    <link rel="stylesheet" href="{{ contextRoot }}lib/font-awesome/css/all.min.css" />
-    <link rel="stylesheet" href="{{ contextRoot }}css/styles.css" />
+    <link rel="stylesheet" href="[[context_root]]lib/bulma/css/bulma.min.css" />
+    <link rel="stylesheet" href="[[context_root]]lib/font-awesome/css/all.min.css" />
+    <link rel="stylesheet" href="[[context_root]]css/styles.css" />
 
     <script>
         (function (i, s, o, g, r, a, m) {
