remvoed extra slash from image url

--- a/Portfolio/Portfolio.Web/src/pages/index.njk
+++ b/Portfolio/Portfolio.Web/src/pages/index.njk
@@ -103,7 +103,7 @@
                 {% for skill in category.skills %}
                 <div class="column is-one-sixth is-one-quarter-mobile has-text-centered">
                     <figure>
-                        <img src="[[context_root]]/img/logos/{{skill.logo}}" style="width: 64px" />
+                        <img src="[[context_root]]img/logos/{{skill.logo}}" style="width: 64px" />
                         <figcaption>{{skill.title}}</figcaption>
                     </figure>
                 </div>  
