--- a/Portfolio/Portfolio.Web/src/pages/index.njk
+++ b/Portfolio/Portfolio.Web/src/pages/index.njk
@@ -50,8 +50,8 @@
         About Me
     </h3>
     <p>
-        I am a motivated software developer with a penchant for creating intuitive user interfaces.
-        That is not to say I don't know my way around a web service or database.
+        I am a motivated software developer with a passion for automating tasks and creating robust and easy to use APIs.
+        I can enjoy creating intuitive user interfaces, if forced upon me.        
         I am a quick learner who thrives when thrown into situations with new and unfamiliar technologies and libraries.
         I can often be found in a dark room coding, if I'm not I am likely cycling, driving, or bothering friends or family.
     </p>
